--- a/styles.css
+++ b/styles.css
@@ -450,6 +450,7 @@ footer {
     margin-top: 10px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-sizing: border-box;
   }
   .icon-div {
     display: flex;
